--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div>
-            <span>Techium</span>
+            <div>
+                <a href="/"><span>Techium</span></a>
+            </div>
             <nav></nav>
         </div>
     </header>
