--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -35,7 +35,6 @@
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
-                <a href="#">Get started</a>
             </div>
         </section>
         <!-- Services section -->
@@ -46,12 +45,12 @@
                     <p>We work with you</p>
                 </header>
                 <div>
-                    <h3><a href="#">Design & Concept</a></h3>
-                    <h3><a href="#">Digital Strategy</a></h3>
-                    <h3><a href="#">Content Strategy</a></h3>
-                    <h3><a href="#">UX Design</a></h3>
-                    <h3><a href="#">Web Development</a></h3>
-                    <h3><a href="#">Social Media</a></h3>
+                    <h3>Design & Concept</h3>
+                    <h3>Digital Strategy</h3>
+                    <h3>Content Strategy</h3>
+                    <h3>UX Design</h3>
+                    <h3>Web Development</h3>
+                    <h3>Social Media</h3>
                 </div>
             </div>
         </section>
@@ -64,13 +63,13 @@
                 </header>
                 <div>
                     <article>
-                        <h3><a href="#">Interior Design</a></h3>
+                        <h3>Interior Design</h3>
                     </article>
                     <article>
-                        <h3><a href="#">Web Development</a></h3>
+                        <h3>Web Development</h3>
                     </article>
                     <article>
-                        <h3><a href="#">Personal Brand</a></h3>
+                        <h3>Personal Brand</h3>
                     </article>
                 </div>
             </div>
@@ -90,7 +89,6 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
-                <a href="about.html">Learn more about us</a>
             </div>
         </section>
         <!-- Latest news section -->
@@ -102,18 +100,21 @@
                 <div>
                     <article>
                         <p>Career</p>
-                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <small>By Kelly D.</small>
                     </article>
                     <article>
                         <p>Digital Life</p>
-                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                        <small>By William A.</small>
                     </article>
                     <article>
                         <p>Social</p>
-                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                        <h3>Bestiarum vero nullum iudicium puto.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                        <small>By Frances J.</small>
                     </article>
                 </div>
             </div>
@@ -128,19 +129,19 @@
                 <div>
                     <article>
                         <blockquote>
-                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                            I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                             <cite>Yuri Y.</cite>
                         </blockquote>
                     </article>
                     <article>
                         <blockquote>
-                            <p>Thank you so much for your help. Techium company is awesome!</p>
+                            Thank you so much for your help. Techium company is awesome!
                             <cite>Dorrie S.</cite>
                         </blockquote>
                     </article>
                     <article>
                         <blockquote>
-                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                            I love your system. Definitely worth the investment. I'd be lost without Techium company.
                             <cite>Sven H.</cite>
                         </blockquote>
                     </article>
@@ -157,12 +158,15 @@
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
-                <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
     <!-- Footer -->
     <footer>
+        <address>
+            234 Washington Street<br>
+            Urbana, Illinois
+        </address>
         <div>
             <ul>
                 <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
